--- a/src/css/Lyric.css
+++ b/src/css/Lyric.css
@@ -98,6 +98,7 @@ button{
     width: 100%;
     height: 100%; 
     overflow: auto; 
+    background-color: rgba(255, 255, 255, 0.4);
     backdrop-filter: blur(8px); /* Effet de flou sur l'arrière-plan */
   }
   
@@ -108,7 +109,7 @@ button{
     padding: 20px;
     border: 1px solid #888;
     max-width: 80%; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986);
     border-radius: 10px;
     position: relative;
     line-height: 1.6; /* Espacement entre les lignes */
